# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")
import("//vendor/huawei/arkcompiler/cangjie_api/multi-product_diff.gni")

ohos_cj_library("kit.AbilityKit") {
  sources = [ "AbilityKit/index.cj" ]

  cj_deps = [
    "../api/app/ability/ability_constant:ohos.app.ability.ability_constant",
    "../api/app/ability/ability_stage:ohos.app.ability.ability_stage",
    "../api/app/ability/app_recovery:ohos.app.ability.app_recovery",
    "../api/app/ability/common:ohos.app.ability.common",
    "../api/app/ability/completion_handler:ohos.app.ability.completion_handler",
    "../api/app/ability/configuration:ohos.app.ability.configuration",
    "../api/app/ability/context_constant:ohos.app.ability.context_constant",
    "../api/app/ability/dialog_request:ohos.app.ability.dialog_request",
    "../api/app/ability/error_manager:ohos.app.ability.error_manager",
    "../api/app/ability/open_link_options:ohos.app.ability.open_link_options",
    "../api/app/ability/start_options:ohos.app.ability.start_options",
    "../api/app/ability/ui_ability:ohos.app.ability.ui_ability",
    "../api/app/ability/want:ohos.app.ability.want",
    "../api/app/ability/want_constant:ohos.app.ability.want_constant",
    "../api/ability_access_ctrl:ohos.ability_access_ctrl",
    "../api/bundle/bundle_manager:ohos.bundle.bundle_manager",
  ]

  kit = true
  lib_name = "AbilityKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkData") {
  sources = [ "ArkData/index.cj" ]

  cj_deps = [
    "../api/data/data_share_predicates:ohos.data.data_share_predicates",
    "../api/data/distributed_kv_store:ohos.data.distributed_kv_store",
    "../api/data/preferences:ohos.data.preferences",
    "../api/data/relational_store:ohos.data.relational_store",
    "../api/data/values_bucket:ohos.data.values_bucket",
  ]

  kit = true
  lib_name = "ArkData"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkGraphics2D") {
  sources = [ "ArkGraphics2D/index.cj" ]

  cj_deps = [
    "../api/ohos/arkui/component:ohos.arkui.component",
    "../api/graphics/color_space_manager:ohos.graphics.color_space_manager",
  ]

  kit = true
  lib_name = "ArkGraphics2D"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkUI") {
  sources = [ "ArkUI/index.cj" ]

  cj_deps = [
    "../api/ohos/animator:ohos.animator",
    "../api/ohos/base:ohos.base",
    "../api/ohos/arkui/component:ohos.arkui.component",
    "../api/ohos/arkui/component_snapshot:ohos.arkui.component_snapshot",
    "../api/ohos/curves:ohos.curves",
    "../api/ohos/font:ohos.font",
    "../api/ohos/matrix4:ohos.matrix4",
    "../api/ohos/measure:ohos.measure",
    "../api/ohos/arkui/observer:ohos.arkui.observer",
    "../api/ohos/prompt_action:ohos.prompt_action",
    "../api/ohos/router:ohos.router",
    "../api/ohos/arkui/state_management:ohos.arkui.state_management",
    "../api/ohos/display:ohos.display",
    "../api/ohos/screenshot:ohos.screenshot",
    "../api/ohos/window:ohos.window",
  ]

  kit = true
  lib_name = "ArkUI"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ArkWeb") {
  sources = [ "ArkWeb/index.cj" ]

  cj_deps = [ "../api/web/webview:ohos.web.webview" ]

  kit = true
  lib_name = "ArkWeb"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.BasicServicesKit") {
  sources = [ "BasicServicesKit/index.cj" ]

  cj_deps = [
    "../api/battery_info:ohos.battery_info",
    "../api/common_event_manager:ohos.common_event_manager",
    "../api/device_info:ohos.device_info",
    "../api/request:ohos.request",
    "../api/settings:ohos.settings",
    "../api/system_date_time:ohos.system_date_time",
    "../api/system_parameter_enhance:ohos.system_parameter_enhance",
  ]

  kit = true
  lib_name = "BasicServicesKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CameraKit") {
  sources = [ "CameraKit/index.cj" ]

  cj_deps = [ "../api/multimedia/camera:ohos.multimedia.camera" ]

  kit = true
  lib_name = "CameraKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ConnectivityKit") {
  sources = [ "ConnectivityKit/index.cj" ]

  cj_deps = [
    "../api/bluetooth:ohos.bluetooth",
    "../api/bluetooth/base_profile:ohos.bluetooth.base_profile",
    "../api/bluetooth/ble:ohos.bluetooth.ble",
    "../api/bluetooth/connection:ohos.bluetooth.connection",
    "../api/bluetooth/constant:ohos.bluetooth.constant",
    "../api/wifi_manager:ohos.wifi_manager",
  ]

  kit = true
  lib_name = "ConnectivityKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CoreFileKit") {
  sources = [ "CoreFileKit/index.cj" ]

  cj_deps = [
    "../api/file/fileuri:ohos.file.fileuri",
    "../api/file/fs:ohos.file.fs",
  ]

  kit = true
  lib_name = "CoreFileKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.CryptoArchitectureKit") {
  sources = [ "CryptoArchitectureKit/index.cj" ]

  cj_deps = ["../api/security/crypto_framework:ohos.security.crypto_framework"]

  kit = true
  lib_name = "CryptoArchitectureKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.ImageKit") {
  sources = [ "ImageKit/index.cj" ]

  cj_deps = [ "../api/multimedia/image:ohos.multimedia.image" ]

  kit = true
  lib_name = "ImageKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.IPCKit") {
  sources = [ "IPCKit/index.cj" ]

  cj_deps = [ "../api/rpc:ohos.rpc" ]

  kit = true
  lib_name = "IPCKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.LocalizationKit") {
  sources = [ "LocalizationKit/index.cj" ]

  cj_deps = [
    "../api/i18n:ohos.i18n",
    "../api/resource_manager:ohos.resource_manager",
  ]

  kit = true
  lib_name = "LocalizationKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.LocationKit") {
  sources = [ "LocationKit/index.cj" ]

  cj_deps = [ "../api/geo_location_manager:ohos.geo_location_manager" ]

  kit = true
  lib_name = "LocationKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.MediaKit") {
  sources = [ "MediaKit/index.cj" ]

  cj_deps = [ "../api/multimedia/media:ohos.multimedia.media" ]
  kit = true
  lib_name = "MediaKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.MediaLibraryKit") {
  sources = [ "MediaLibraryKit/index.cj" ]

  cj_deps = [
    "../api/file/photo_access_helper:ohos.file.photo_access_helper",
    "../api/app/ability/ui_ability:ohos.app.ability.ui_ability",
  ]

  kit = true
  lib_name = "MediaLibraryKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.NetworkKit") {
  sources = [ "NetworkKit/index.cj" ]

  cj_deps = [
    "../api/net/connection:ohos.net.connection",
    "../api/net/http:ohos.net.http",
  ]

  kit = true
  lib_name = "NetworkKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.PerformanceAnalysisKit") {
  sources = [ "PerformanceAnalysisKit/index.cj" ]

  cj_deps = [
    "../api/cj_leak_watcher:ohos.cj_leak_watcher",
    "../api/hi_trace_meter:ohos.hi_trace_meter",
    "../api/hiviewdfx/hi_app_event:ohos.hiviewdfx.hi_app_event",
    "../api/hilog:ohos.hilog",
  ]

  kit = true
  lib_name = "PerformanceAnalysisKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.SensorServiceKit") {
  sources = [ "SensorServiceKit/index.cj" ]

  cj_deps = [ "../api/sensor:ohos.sensor" ]

  kit = true
  lib_name = "SensorServiceKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.TelephonyKit") {
  sources = [ "TelephonyKit/index.cj" ]

  cj_deps = [ "../api/telephony/call:ohos.telephony.call" ]

  kit = true
  lib_name = "TelephonyKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}

ohos_cj_library("kit.UniversalKeystoreKit") {
  sources = [ "UniversalKeystoreKit/index.cj" ]

  cj_deps = [ "../api/security/huks:ohos.security.huks" ]

  kit = true
  lib_name = "UniversalKeystoreKit"
  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
}
