# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("//vendor/huawei/arkcompiler/cangjie_api/cjc.gni")

ohos_cj_library("ohos.bundle_manager") {
  sources = [
    "src/bundle_manager.cj",
    "src/cj_bundle_enum.cj",
    "src/cj_bundle_ffi.cj",
    "src/cj_bundle_utils.cj",
    "src/default_app_manager.cj",
    "src/error_code.cj",
    "src/error_message.cj",
  ]

  cj_deps = [
    "../arkui/cj:ohos.base",
    "../ffi_bind:ohos.ffi",
    "../hilog:ohos.hilog",
    "../resource_manager:ohos.resource_manager",
    "../labels:ohos.labels",
  ]

  external_deps = [ "bundle_framework:cj_bundle_manager_ffi" ]

  subsystem_name = "arkcompiler"
  part_name = "cangjie_api"
  lib_name = "bundle_manager"
}
